# caltech_ctme_retail_capstone

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
caltech_ctme_retail_capstone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: conventional_commits_guide.md  git_cheatsheet.md
src/: cohort_analysis.py  config.py  data_cleaning.py  data_exporter.py  data_loader.py  eda.py  kmeans_model.py  logger.py  rfm_model.py  shap_explainer.py
tests/: conftest.py  test_data_cleaning.py
