[build-system]
# setuptools is the most common Python build tool — it knows how to turn
# your project folder into an installable package
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caltech-ctme-retail-capstone"
version = "0.1.0"
description = "Customer segmentation using RFM analysis and k-means clustering on UK online retail data"
# Minimum Python version required to run this project
requires-python = ">=3.10"

# Runtime dependencies — installed automatically when you run pip install -e .
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "xgboost",
    "shap",
    "openpyxl",           # needed by pandas to read .xlsx files
    "python-json-logger", # enables structured JSON logging
]

[project.optional-dependencies]
# Dev dependencies — only needed for development, not to run the pipeline.
# Install with: pip install -e ".[dev]"
dev = [
    "pytest",
    "pytest-cov",  # generates test coverage reports
]

[tool.setuptools.packages.find]
# Tell setuptools to look for packages starting with "src" in the project root.
# This is what lets you write "from src.config import ..." without sys.path hacks.
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
# Tell pytest to only look in the tests/ folder when you run pytest
testpaths = ["tests"]